# ApeRAG

./: .cursorrules  .dockerignore  .env.template  .gitignore  .gitmodules  BUILD.md  Dockerfile  Dockerfile-llmserver  HOW-TO-BUILD-DOCKER-zh.md  Makefile  README-zh.md  README.md  README_zh.md  SECURITY_FIXES_SUMMARY.md  bug_analysis_report.md  compose.yml  current_error.txt  docker-compose.yml  manage.py  merge_suggestions_concurrency_analysis.md  model_configs.json  nebula-docker-compose.yml  pyproject.toml  requirements-llmserver.txt  requirements.txt  supported_model_service_providers.json  sync-kb-docs.sh  test_lint_error.py  text.yaml  uvicorn-log-config.yaml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  improvement-request.md
.github/utils/: generate_kbcli_sha256.py  generate_release_notes.py  pcregrep.py  release_gitlab.sh  utils.sh
.github/workflows/: README-zh.md  build-ghcr-images.yml  build-images-optimized.yml  build-images.yml  cicd-pull-request.yml  cicd-push.yml  deploy_frontend.yml  e2e-aperag.yml  e2e-kubechat.yml  e2e-test-parallel.yml  e2e-test.yml  issues-move.yml  milestoneclose.yml  package-version.yml  pull-request-check.yml  pull-request-label-size.yaml  pull-request-user-interaction.yaml  release-chart.yml  release-create.yml  release-helm-chart.yml  release-image.yml  release-notes.yaml  release-version.yml
aperag/: admin.py  aperag_config.py  app.py  apps.py  config.py  exceptions.py  test_lint_error.py  urls.py
aperag/agent/: __init__.py  agent_history_manager.py  agent_memory_manager.py  i18n.py  mcp_app_factory.py  rag_agent.py  stream_formatters.py  tool_reference_extractor.py  tool_use_message_formatters.py
aperag/api/: openapi.yaml
aperag/auth/: __init__.py  authentication.py  validator.py
aperag/chat/: message.py  utils.py
aperag/concurrent_control/: README-MultiLock.md  README-zh.md  README.md  __init__.py  core.py  examples.py  redis_lock.py  threading_lock.py  utils.py
aperag/context/: context.py  context_test.py  full_text.py  test_full_text.py
aperag/db/: models.py  nebula_sync_manager.py  neo4j_async_manager.py  neo4j_manager.py  neo4j_optimal_solution.py  neo4j_sync_manager.py  ops.py  postgres_sync_manager.py  redis_manager.py
aperag/docparser/: audio_parser.py  base.py  chunking.py  doc_parser.py  docray_parser.py  image_parser.py  markitdown_parser.py  mineru_common.py  mineru_parser.py  parse_md.py  utils.py
aperag/embed/: base_embedding.py  embedding_service.py  embedding_utils.py  local_path_embedding.py  qa_embedding.py  question_embedding.py  question_generator.py  test_embedding_service.py  test_image_embedding.py  test_local_path_embedding.py
aperag/flow/: dag.py  engine.py  parser.py  test_flow.py
aperag/graph/: async_vs_sync_best_practices.md  done.md  event_loop_error.md  lightrag_celery_stateless_integration.md  lightrag_concurrent_problems-zh.md  lightrag_concurrent_solution_summary.md  lightrag_global_state_solution_v2.md  lightrag_holder.py  lightrag_holder2.py  lightrag_manager.py  lightrag_stateless_celery_example.py  lightrag_stateless_interfaces.md  lightrag_wrapper.py  (+16 more)
common/: schema.py  sql_database.py
config/: __init__.py  asgi.py  celery.py  celery_app.py  celery_tasks.py  flowerconfig.py  prefect_config.py  prefect_database.py  prefect_embedded.py  prefect_tasks.py  redis_task_example_data.json  settings.py  urls.py  vector_db.py  wsgi.py
configs/: __init__.py  config.py  model_config.py
deeprag/: admin.py  apps.py  urls.py
docs/: ApeRAG_Document_Processing_Flow.md  HOW-TO-DEBUG-zh.md  HOW-TO-DEBUG.md  anybase-integration-final.md  anybase-integration.md  authentication.md  development-guide-zh.md  development-guide.md  indexing_architecture.md  indexing_architecture_zh.md
envs/: .docker-env.template  .env.frontend.local.auth0  .env.frontend.local.authing  .env.frontend.local.none  .env.frontend.online.auth0  .env.frontend.template  .env.template  anybase.env.example  docker.env.overrides  docker.env.template  env.template
frontend/: .dockerignore  .gitignore  .prettierignore  .umirc.ts  Dockerfile  Dockerfile.prod  Makefile  Makefile.docker  README.md  openapitools.json  package-lock.json  package.json  tsconfig.json  typings.d.ts
kubechat/: admin.py  apps.py  config.py  deprecated.py  feishu.py  index.py  models.py  urls.py  views.py
models/: adapter.py  alibaba_bailian_models_completion.json  alibaba_bailian_models_embedding.json  generate_model_configs.py  llm_utils.py  loader.py  openrouter_models.json
playground/: chatgpt.py  jieba_tok.py  rs.py  sse.py  test.py  vectordb.py  vllm.py
query/: query.py
readers/: Readers.py  base_embedding.py  base_readers.py  compose_audio_reader.py  compose_image_reader.py  compressed_file_reader.py  doc_reader.py  docx_reader.py  docx_reader_test.py  epub_reader.py  excel_reader.py  html_reader.py  local_path_embedding.py  local_path_qa_embedding.py  local_path_reader.py  markdown_reader.py  markdown_reader_test.py  ppt_reader.py  pptx_reader.py  qa_embedding.py  qa_generator.py  question_embedding.py  question_generator.py  readers.py  sensitive_filter.py  test_image_embedding.py  test_local_path_embedding.py  txt_reader.py
scripts/: build-offline-package.sh  download_model.py  entrypoint.sh  export-requirements.sh  generate_model_config_sql.py  generate_model_configs.py  init-es.sh  kubeblocks-docs.sh  prepare_for_mineru.py  release-charts.sh  start-celery-beat.sh  start-celery-flower.sh  start-celery-worker.sh  start-django.sh  store_doc2vectordb.py
server/: chat_adapter.py  llmserver.py  main.py  webserver.py
terraform/: .terraform.lock.hcl  eks.tf  key.tf  lb.tf  resources.tf  run.sh  variables.tf  versions.tf  vpc.tf
tests/: DeepRAG.jmx  KubeChat.jmx  test.sh
utils/: date.py  prompt.py  utils.py
vectorstore/: base.py  chroma_connector.py  connector.py  milvus_connector.py  opensearch_connector.py  qdrant_connector.py  test_connector.py  weaviate_connector.py
version/: __init__.py
web/: .gitignore  .prettierignore  Dockerfile  Makefile  README.md  next.config.ts  package.json  typings.d.ts
(+1722 files in other folders)
