[tool.poetry]
name = "aperag"
version = "0.1.0"
description = "A LLM based tool to support Text2SQL, Chatbot, KubeBlocks pilot and troubleshooting"
authors = ["nayutah <dullboy@apecloud.com>"]
readme = "README.md"
# packages = [{ include = "server" }]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.13"
langchain = "^0.3.23"
langchain-huggingface = "^0.1.2"
llama-index = "^0.12.28"
uvicorn = {extras = ["standard"], version = "^0.23.1"}
django = "^4.2.2"
pydantic = "^2.10.3"
cryptography = "^41.0.1"
python-dotenv = "^1.0.0"
django-environ = "^0.10.0"
django-ninja = "^1.4.0"
auth0-python = "^4.2.0"
celery = "^5.3.1"
channels = "^4.0.0"
pypdf = "^5.4.0"
py7zr= "^0.20.8"
rarfile= "^4.1"
qdrant-client = {version="^1.3.0", python = ">=3.8.1,<3.12"}
pymilvus = { version = "^2.2.12", optional = true }
redis = "^4.6.0"
weaviate-client = { version = "^4.5.7", optional = true }
arrow = "^1.2.3"
func-timeout = "^4.3.5"
docx2txt = "^0.8"
terminal = "^0.4.0"
types-chardet = "^5.0.4.6"
psycopg2-binary = "^2.9.6"
watchfiles = "^0.19.0"
flower = "^2.0.0"
django-celery-beat = "^2.5.0"
boto3 = "^1.26.165"
oss2 = "^2.18.0"
django-cors-headers = "^4.1.0"
socksio = "^1.0.0"
django-prometheus = "^2.3.1"
whitenoise = "^6.5.0"
types-requests = "^2.31.0.2"
python-docx = "^0.8.11"
elasticsearch = "^8.9.0"
gevent = "^23.9.1"
mdsplit = "^0.4.0"
requests = "^2.31.0"
qianfan = "^0.4.12.3"
pillow = "^10.0.0"
openai = "^1.71.0"
dashscope = "^1.23.1"
python-pptx = "^0.6.23"
unstructured = {extras = ["xlxs", "html"], version = "^0.11.0"}
gitpython = "^3.1.43"
llama-index-embeddings-google = "^0.3.1"
llama-index-embeddings-langchain = "^0.3.0"
llama-index-vector-stores-opensearch = "^0.5.2"
llama-index-vector-stores-milvus = "^0.7.2"
llama-index-vector-stores-qdrant = "^0.6.0"
llama-index-vector-stores-weaviate = "^1.3.1"
lightrag-hku = "^1.3.1"
pipmaster = "^0.5.4"
graspologic = "^3.4.1"
magic-pdf = {extras = ["full"], version = "^1.3.5"}
pytablewriter = "^1.2.1"

[tool.poetry.group.model]
optional = true

[tool.poetry.group.model.dependencies]
torch = "^2.6.0"
text2vec = "^1.3.3"
flagembedding = "^1.3.4"
sentence-transformers = "^4.0.2"
# The text2vec library is not compatible with versions of the transformers library newer than 4.49.0.
# This is because text2vec depends on the AdamW optimizer, which has been removed in later transformers releases.
transformers = "4.49.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.2"
types-toml = "^0.10.8.1"
types-redis = "^4.3.21.6"
types-chardet = "^5.0.4.6"
vulture = "^2.14"
deptry = "^0.23.0"
mypy = "^1.4.1"
datamodel-code-generator = "^0.28.5"

[tool.poetry.extras]
all = [
    "pymilvus",
    "pymongo",
    "chromadb",
    "elasticsearch",
    "weaviate-client",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
test_local_path_embedding = "readers.test_local_path_embedding:start"

[tool.ruff]
select = [
    "E",  # pycodestyle
    "F",  # pyflakes
    "I",  # isort
]

ignore = [
    "E501",
]

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    ".github",
    "models",
    "playground",
    "aperag/migrations",
    "vectorstore/test_connector.py",
    "readers/test_local_path_embedding.py",
]

# Same as Black.
line-length = 120

[tool.mypy]
ignore_missing_imports = "True"
disallow_untyped_defs = "False"
exclude = [
    "playground",
    "services/text2SQL",
    ".github",
    "models",
    "playground",
    "aperag/migrations",
    "vectorstore/test_connector.py",
    "readers/test_local_path_embedding.py",
]

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
tabulate = "^0.9.0"
pytablewriter = "^1.0.0"

